data/derived/comb/progs/unify/prog4133.ml.out
Characters 447-451:
  if rand mod 2 =0 then buildAverage(buildX(),buildY()) 
     ^^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type int
